added more responsive

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         so that our team can accurately work on your pre-order.</p>
       <button class="btn btn-primary">Shop Now</button>
   </div>
-  <div class="flex justify-center">
+  <div class=" lg:flex justify-center md:flex-col">
     <img src="./Flower Asset/pngwing 8.png" class="max-w-sm rounded-lg shadow-2xl" />
   </div>
   </section>
