--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <section>
   <div class="grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 gap-6 p-6">
   <div class="card bg-indigo-700 shadow-xl shadow-pink-500">
-    <figure><img class="w-[250px] lg:w-full" src="/c images/sun flower.png" alt="" /></figure>
+    <figure><img class="w-[250px] lg:w-full" src="./c images/sun flower.png" alt="" /></figure>
     <div class="card-body">
       <h2 class="card-title">
          <h4 class="text-cyan-300">Sun Flower  <div class="badge badge-secondary text-white">NEW</div></h4>
@@ -105,7 +105,7 @@
     </div>
   </div>
   <div class="card bg-fuchsia-700 shadow-xl shadow-red-500">
-    <figure><img class="w-1/2 md:w-[200px] lg:w-full" src="/c images/pngwing 5.png" alt="" /></figure>
+    <figure><img class="w-1/2 md:w-[200px] lg:w-full" src="./c images/pngwing 5.png" alt="" /></figure>
     <div class="card-body">
       <h2 class="card-title">
         <h4 class="text-amber-600">Transvaal Daisy!  <div class="badge badge-secondary text-white">NEW</div></h4>
@@ -120,7 +120,7 @@
     </div>
   </div>
   <div class="card bg-slate-700 shadow-xl shadow-green-500">
-    <figure><img class="w-1/2 md:w-[200px] lg:w-full" src="/c images/BF89-11K-removebg-preview.png" alt="" /></figure>
+    <figure><img class="w-1/2 md:w-[200px] lg:w-full" src="./c images/BF89-11K-removebg-preview.png" alt="" /></figure>
     <div class="card-body">
       <h2 class="card-title" >
       <h4 class="text-white" >Lily & <span class="text-rose-500">Rose</span>!  <div class="badge badge-secondary text-white">NEW</div> </h4>
@@ -133,7 +133,7 @@
     </div>
   </div>
   <div class="card bg-teal-500 shadow-xl shadow-orange-400" >
-    <figure><img class="w-1/2 md:w-[200px] lg:w-full " src="/c images/Lily-Rose-Melody-2-removebg-preview.png" alt="" /></figure>
+    <figure><img class="w-1/2 md:w-[200px] lg:w-full " src="./c images/Lily-Rose-Melody-2-removebg-preview.png" alt="" /></figure>
     <div class="card-body">
       <h2 class="card-title">
          <h4 class="text-rose-700">Rose!  <div class="badge badge-secondary text-white">NEW</div></h4>
@@ -151,22 +151,6 @@
 </div>
 </section>
 
-<!-- <section class="w-[90%] mx-auto grid grid-cols-1 md:grid-cols-2 gap-2 items-center py-3">
-  <div class="bg-pink-600 flex max-w-screen-xl mx-auto justify-between">
-  <div>
-        <h1 class="text-5xl font-bold text-white ">Hot Deal Sale ! <br> Up to  <span class="text-yellow-400 font-semibold">45% OFF</span> <br>
-          on This Valentine!</h1>
-        <p class="py-6 text-white font-semibold uppercase">When you order,<br>
-          Please ensure that the above details are clearly mentioned <br>
-          so that our team can accurately work on your pre-order.</p>
-        <button class="btn btn-primary">Get Started</button>
-      </div>
-      <div class="flex justify-center ">
-        <img  src="./Flower Asset/pngwing 8.png" class="max-w-sm rounded-lg shadow-2xl" />
-        </div>
-    </div>
-  </div>
-</section> -->
 <section class="w-[100%] mx-auto grid grid-cols-1 md:grid-cols-2 gap-2 items-center  bg-pink-500">
   <div class="p-16">
     <h1 class="text-5xl font-bold text-white uppercase ">Hot Deal Sale ! <br> Up to  <span class="text-yellow-400 font-semibold">45% OFF</span> <br>
