added more responsive

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
               </div>
               <div class="navbar-center">
-                <a class="btn btn-ghost font-serif normal-case text-md md:text-xl"> <span class="text-white">Flower</span> Shop</a>
+                <a class="btn btn-ghost font-serif normal-case text-md md:text-4xl"> <span class="text-white">Flower</span> Shop</a>
                   <img class="w-[100px] md:w-[150px] " src="./c images/Pastel Retail Flower Shop Logo.png" alt="">
               </div>
               <div class="navbar-end">
@@ -67,9 +67,9 @@
           </nav>
      
 
-        <section class="w-[90%] mx-auto grid grid-cols-1 md:grid-cols-2 gap-2 items-center py-3">
+        <section class="w-[90%] mx-auto grid grid-cols-1 md:grid-cols-2 gap-2 items-center ">
           <div>
-            <h1 class="text-5xl font-semibold">Make Your Day
+            <h1 class="lg:text-5xl font-semibold text-3xl">Make Your Day
               <span class="text-pink-600 uppercase">Special</span> With Flowers</h1>
             <p class="py-6 font-sans">A flower cannot blossom without sunshine, and
               A man cannot live without Love.
@@ -87,7 +87,7 @@
     <main>
       <div class="text-3xl from-neutral-900 text-center my-4">
        <h2>Our Featured Flowers</h2> 
-       <p class="text-xl text-black font-sans">Check out the Exotic Fresh Flowers to add more freshness to your</p>
+       <p class=" text-sm text-black font-sans">Check out the Exotic Fresh Flowers to add more freshness to your</p>
       </div>
 <section>
   <div class="grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 gap-6 p-6">
@@ -142,7 +142,7 @@
       </h2>
       <p class="text-white">The Flower symbolizes Romance, Love, Beauty, and Courage.</p>
       <div class="card-actions ">
-        <div class="badge badge-outline text-zinc-900 bg-green-500">Price: $25</div> 
+        <div class="badge badge-outline text-white bg-green-500">Price: $25</div> 
         <div class="badge badge-outline text-white">Add to Cart</div>
       </div>
     </div>
@@ -150,27 +150,29 @@
   
 </div>
 </section>
-
+<!-- Hot deal section  -->
 <section class="w-[100%] mx-auto grid grid-cols-1 md:grid-cols-2 gap-2 items-center  bg-pink-500">
-  <div class="p-16">
-    <h1 class="text-5xl font-bold text-white uppercase ">Hot Deal Sale ! <br> Up to  <span class="text-yellow-400 font-semibold">45% OFF</span> <br>
+  <div class="p-12">
+    <h1 class="lg:text-5xl sm:text-3xl md:text-4xl font-bold text-white uppercase ">Hot Deal Sale ! <br> Up to  <span class="text-yellow-400 font-semibold">45% OFF</span> <br>
       on This Valentine!</h1>
-      <p class="py-6 text-white font-sans uppercase">When you order,<br>
+      <p class="py-6 font-sans text-white ">When you order,<br>
         Please ensure that the above details are clearly mentioned <br>
         so that our team can accurately work on your pre-order.</p>
       <button class="btn btn-primary">Shop Now</button>
   </div>
-  <div class=" lg:flex justify-center md:flex-col">
-    <img src="./Flower Asset/pngwing 8.png" class="max-w-sm rounded-lg shadow-2xl" />
+  <div class=" flex justify-center md:flex-col ">
+    <img class="lg:w-1/2 md:w-[250px] w-[30%]" src="./Flower Asset/pngwing 8.png" class="max-w-sm rounded-lg shadow-2xl" />
   </div>
   </section>
+
+  <!-- New arrival section  -->
 <section>
   <div class="text-center py-4">
   <h1 class="text-3xl font-serif font-bold py-4">New Arrival</h1>
 
     <p class="text-xl font-sans">With our Colorful Flowers, Make Someone Smile Today  </p>
   </div>
-  <div class="flex justify-center gap-6 py-8">
+  <div class="flex justify-center gap-6 py-12">
   <div class="card  bg-base-100 shadow-xl">
     <figure><img src="./Flower Asset/Rectangle 4.png" alt="flower" /></figure>
     </div>
